// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField It should render a default Textfiled 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField should handle the hover for outline variant 1`] = `
<div
  class="quill-input-no-label__wrapper"
>
  <input
    class="input peer input__align--left input__size--md"
    placeholder="Placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`TextField should render a TextField with error status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--error quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField should render a TextField with success status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--success quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
